More fixes for short full session being too short

--- a/Client/src/pages/WeekPage.css
+++ b/Client/src/pages/WeekPage.css
@@ -32,16 +32,13 @@
 } */
 
 .fullCell {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  height: 5em;
+  text-align: center;
+  margin: 1px;
+  border: 1px solid #046c99;
   background-color: #0898db;
   color: white;
-  width: 100%;
-  border: 1px solid #046c99;
-  border-radius: 2px;
+  border-radius: 3px;
+  height: 5em;
 }
 
 
@@ -58,8 +55,9 @@
 
 .fullCellShort {
   /* line-height: 5em; */
-  text-align: center;
+  width: 99%;
   margin: 1px;
+  text-align: center;
   border: 1px solid #046c99;
   background-color: #0898db;
   color: white;
